--- a/app/src/main/res/layout/activity_learning_icon.xml
+++ b/app/src/main/res/layout/activity_learning_icon.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#EFEDE7"
     android:orientation="vertical"
-    tools:context=".learning_space.icon.LearningIconActivity">
+    tools:context=".learning_space.intent.LearningIconActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/learning_info_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -46,6 +47,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/learning_info_tv2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -82,6 +84,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/exam_number_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
@@ -91,55 +94,6 @@
                             android:textStyle="bold" />
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="28dp"
-                        android:layout_marginTop="36dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="어쩌구 :"
-                            android:textColor="@color/black"
-                            android:textSize="28dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:text="10"
-                            android:textColor="@color/black"
-                            android:textSize="28dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="28dp"
-                        android:layout_marginTop="36dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="어쩌구 :"
-                            android:textColor="@color/black"
-                            android:textSize="28dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:text="10"
-                            android:textColor="@color/black"
-                            android:textSize="28dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -155,9 +109,20 @@
                             android:textColor="@color/black"
                             android:textSize="28dp"
                             android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/level_number_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:text="5"
+                            android:textColor="@color/black"
+                            android:textSize="28dp"
+                            android:textStyle="bold" />
                     </LinearLayout>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/iconStart_btn"
                         android:layout_width="200dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
