--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -5,5 +5,6 @@
         <domain includeSubdomains="true">127.0.0.1</domain>
         <domain includeSubdomains="true">192.168.35.175</domain>
         <domain includeSubdomains="true">172.30.58.1</domain>
+        <domain includeSubdomains="true">172.16.111.213</domain>
     </domain-config>
 </network-security-config>
