--- a/app/src/main/res/layout/activity_default_gallery.xml
+++ b/app/src/main/res/layout/activity_default_gallery.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.naver.activity.NaverActivity"
-    android:background="@color/naver_bg">
+    android:background="@color/white">
 
     <com.sungkyul.synergy.utils.edu.EduScreen
         android:id="@+id/edu_screen"
@@ -18,41 +17,54 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:padding="12dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end">
+        <ImageButton
+            android:id="@+id/grouping_similar_images_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            android:src="@drawable/todo_circle"
+            android:scaleType="centerInside"
+            android:background="@drawable/black_circle"
+            android:contentDescription="@string/grouping_similar_images_button"/>
 
-            <ImageButton
-                android:id="@+id/search_button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="12dp"
-                android:src="@drawable/phone_magnifying_glass"
-                android:scaleType="centerInside"
-                android:background="@null"
-                android:contentDescription="@string/notification"/>
+        <ImageButton
+            android:id="@+id/making_movie_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            android:src="@drawable/todo_circle"
+            android:scaleType="centerInside"
+            android:background="@drawable/black_circle"
+            android:contentDescription="@string/making_movie_button"/>
 
-            <ImageButton
-                android:id="@+id/more_button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="12dp"
-                android:src="@drawable/phone_more"
-                android:scaleType="centerInside"
-                android:background="@null"
-                android:contentDescription="@string/wallet"/>
+        <ImageButton
+            android:id="@+id/search_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            android:src="@drawable/phone_magnifying_glass"
+            android:scaleType="centerInside"
+            android:background="@drawable/black_circle"
+            android:contentDescription="@string/search_button"/>
 
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/more_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            android:src="@drawable/phone_more"
+            android:scaleType="centerInside"
+            android:background="@drawable/black_circle"
+            android:contentDescription="@string/more_button"/>
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/album"
+    <FrameLayout
+        android:id="@+id/gallery_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/top_menu_bar"
@@ -61,20 +73,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_menu_bar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:padding="4dp"
+        android:layout_height="60dp"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
-            android:id="@+id/shopping_group"
+            android:id="@+id/picture_button"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/black_rounded_rect"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/home_group">
+            app:layout_constraintEnd_toStartOf="@id/album_button">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -82,18 +95,25 @@
                 android:textSize="12sp"
                 android:text="@string/picture"/>
 
+            <ImageView
+                android:id="@+id/picture_button_line"
+                android:layout_width="48dp"
+                android:layout_height="5dp"
+                android:src="@color/black"/>
+
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/home_group"
+            android:id="@+id/album_button"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/black_rounded_rect"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/shopping_group"
-            app:layout_constraintEnd_toStartOf="@id/contents_group">
+            app:layout_constraintStart_toEndOf="@id/picture_button"
+            app:layout_constraintEnd_toStartOf="@id/story_button">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -101,18 +121,25 @@
                 android:textSize="12sp"
                 android:text="@string/album"/>
 
+            <ImageView
+                android:id="@+id/album_button_line"
+                android:layout_width="48dp"
+                android:layout_height="5dp"
+                android:src="@color/black"/>
+
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/contents_group"
+            android:id="@+id/story_button"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/black_rounded_rect"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/home_group"
-            app:layout_constraintEnd_toStartOf="@id/clip_group">
+            app:layout_constraintStart_toEndOf="@id/album_button"
+            app:layout_constraintEnd_toStartOf="@id/share_button">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -120,17 +147,24 @@
                 android:textSize="12sp"
                 android:text="@string/story"/>
 
+            <ImageView
+                android:id="@+id/story_button_line"
+                android:layout_width="48dp"
+                android:layout_height="5dp"
+                android:src="@color/black"/>
+
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/clip_group"
+            android:id="@+id/share_button"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/black_rounded_rect"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/contents_group"
+            app:layout_constraintStart_toEndOf="@id/story_button"
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
@@ -138,6 +172,12 @@
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:text="@string/share"/>
+
+            <ImageView
+                android:id="@+id/share_button_line"
+                android:layout_width="48dp"
+                android:layout_height="5dp"
+                android:src="@color/black"/>
 
         </LinearLayout>
 
